; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_kprobe.c_set_print_fmt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_kprobe.c_set_print_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_probe = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i8* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trace_probe*)* @set_print_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_print_fmt(%struct.trace_probe* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.trace_probe*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store %struct.trace_probe* %0, %struct.trace_probe** %3, align 8
  %6 = load %struct.trace_probe*, %struct.trace_probe** %3, align 8
  %7 = call i32 @__set_print_fmt(%struct.trace_probe* %6, i8* null, i32 0)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %8, 1
  %10 = load i32, i32* @GFP_KERNEL, align 4
  %11 = call i8* @kmalloc(i32 %9, i32 %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %1
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %2, align 4
  br label %28

17:                                               ; preds = %1
  %18 = load %struct.trace_probe*, %struct.trace_probe** %3, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 %20, 1
  %22 = call i32 @__set_print_fmt(%struct.trace_probe* %18, i8* %19, i32 %21)
  %23 = load i8*, i8** %5, align 8
  %24 = load %struct.trace_probe*, %struct.trace_probe** %3, align 8
  %25 = getelementptr inbounds %struct.trace_probe, %struct.trace_probe* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i8* %23, i8** %27, align 8
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %17, %14
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @__set_print_fmt(%struct.trace_probe*, i8*, i32) #1

declare dso_local i8* @kmalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
